kubernetes/apps/minecraft/servers/survival-2/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mc
  namespace: minecraft
spec:
  template:
    spec:
      containers:
        - name: mc
        - name: mc-backup
