kubernetes/apps/minecraft/servers/survival-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc
  namespace: minecraft
  annotations:
    mc-router.itzg.me/externalServerName: "survival-2.mc.lilstrudel.io"
    mc-router.itzg.me/autoScaleWaitTimeout: "3m"
